step1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gandalf
  namespace: gandalf
  labels:
    app: gandalf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gandalf
  template:
    metadata:
      labels:
        app: gandalf
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
    spec:
      containers:
        - name: gandalf
          image: masterbohmid/gandalf:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
