step1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gandalf
  namespace: gandalf
  labels:
    app: gandalf
  # annotations:
  #   cloud.google.com/load-balancer-type: "External"
spec:
  type: NodePort
  selector:
    app: gandalf
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
