step1/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gandalf-allow-http
  namespace: gandalf
spec:
  podSelector:
    matchLabels:
      app: gandalf
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
      from:
        - ipBlock:
            cidr: 0.0.0.0/0
